--- a/module.yaml
+++ b/module.yaml
@@ -1,4 +1,4 @@
+os: linux
+if_running: swww-daemon
 run:
-    # - if:
-    #   running: 'Hyprland'
     - shell: 'swww img --transition-step 40 --transition-type simple --resize {% set bgmodes = {"fill": "crop", "fit": "fit"} %} {{bgmodes[wallpaper.mode]}} "{{wallpaper.path}}"'
